# listentothissy

./: .gitignore  .spotify_token_cache.json  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: main.rs  util.rs
src/commands/: follow.rs  info.rs  link.rs  mod.rs  purge.rs  unlink.rs
