[package]
name = "listentothissy"
version = "0.0.1"
authors = ["angelocarly <angelo.carly@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.1"
rspotify = { version = "0.9"}
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0.57"
serde = "1.0.116"
